First iteration of working Evergreen logger